--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailConfiguration": {
+    "From": "tailedstory@yandex.ru",
+    "SmtpServer": "smtp.yandex.ru",
+    "Port": 465,
+    "UserName": "tailedstory@yandex.ru",
+    "Password": "pwnslqwnnklldfcc"
+  }
 }
